@@ -20,6 +20,7 @@ Slated for 2.21.0
 - Added: HashedHashMap.containsValue(K, V).
 - Changed: PairGroup now uses a pooled array of pairs instead creating many 
   pair objects over and over again.
+- Changed: PairGroup.clear().
 
 Changed in 2.20.2
 =================
